--- a/flask_app/templates/application.html
+++ b/flask_app/templates/application.html
@@ -14,8 +14,14 @@
     <style>
         body {
             background-image: url("https://cdn.wallpapersafari.com/52/63/93l8vM.png");
-            background-color: rgba(255,255,255,0.3);
-background-blend-mode: lighten;
+            background-color: rgba(255, 255, 255, 0.3);
+            background-blend-mode: lighten;
+        }
+
+        .btn {
+            position: relative;
+            left: 10px;
+            top: 15px
         }
     </style>
 </head>
@@ -26,7 +32,9 @@ background-blend-mode: lighten;
             <div>
                 <h1 style="font-family: Arial, Helvetica, sans-serif">Adoption application</h1>
                 <h3 style="font-family: 'Dancing Script', cursive" class="mt-5">* Please start the application by
-                    filling out the pet's and the adopter's information</h3>
+                    filling out the pet's and the adopter's information
+                    <br> * Some animals might have been adopted
+                </h3>
             </div>
 
             <div>
