--- a/flask_app/templates/edit_app.html
+++ b/flask_app/templates/edit_app.html
@@ -13,9 +13,15 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/css/application.css') }}">
     <style>
         body {
-            background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/job562-nunoon-04-a-kl62t2ul.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=87c6f3173c45dbc117fbded913216717");
-            background-color: rgba(255,255,255,0.3);
-background-blend-mode: lighten;
+            background-image: url("https://cdn.wallpapersafari.com/52/63/93l8vM.png");
+            background-color: rgba(255, 255, 255, 0.3);
+            background-blend-mode: lighten;
+        }
+
+        .update {
+            position: relative;
+            left: 10px;
+            top: 15px
         }
     </style>
 </head>
@@ -24,22 +30,23 @@ background-blend-mode: lighten;
     <div class="flex">
         <div class="header">
             <div>
-                <h1 style="color: #6c7ae0; font-family: Arial, Helvetica, sans-serif;">Edit {{user.first_name}}'s application</h1>
+                <h1 style="color: purple; font-family: Arial, Helvetica, sans-serif;">Edit {{user.first_name}}'s
+                    application</h1>
                 <h3 style="font-family: 'Dancing Script', cursive" class="mt-5">* Please start the application by
-                    filling out the pet's<br> and the adopter's information</h3>
+                    filling out the pet's and the adopter's information</h3>
             </div>
 
             <div>
                 <a href="/account">
-                <button class="btn btn-outline-dark m-1">
-                    <i class="fas fa-paw"></i>
-                    Account page
-                </button></a>
+                    <button class="btn btn-outline-dark m-1">
+                        <i class="fas fa-paw"></i>
+                        Account page
+                    </button></a>
                 <a href="/logout">
-                <button class="btn btn-outline-dark m-1">
-                    Logout
-                </button></a>
-                
+                    <button class="btn btn-outline-dark m-1">
+                        Logout
+                    </button></a>
+
             </div>
         </div>
 
@@ -70,7 +77,7 @@ background-blend-mode: lighten;
                     <p class="col-8 text-danger">{{message}}</p>
                     {% endfor %}
                     {% endwith %}
-                    <input  type="number" step="0.01" class="form-control" name="age" id="n" value={{pet.age}}>
+                    <input type="number" step="0.01" class="form-control" name="age" id="n" value={{pet.age}}>
                 </div>
                 <div class="form-group">
                     <label for="n">Pet's gender:</label>
@@ -97,11 +104,12 @@ background-blend-mode: lighten;
                     <p class="col-8 text-danger">{{message}}</p>
                     {% endfor %}
                     {% endwith %}
-                    <textarea type="text" class="form-control" name="description" id="des">{{pet.description}}</textarea>
+                    <textarea type="text" class="form-control" name="description"
+                        id="des">{{pet.description}}</textarea>
                 </div>
 
 
-                <input type="submit" value="Apply Now" class="btn btn-warning">
+                <input type="submit" value="Update Application" class="btn btn-warning update">
             </div>
 
             <div class="right">
@@ -113,7 +121,8 @@ background-blend-mode: lighten;
                 {% endfor %}
                 {% endwith %}
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="adopter_old_enough" id="old" value="yes" checked/>
+                    <input class="form-check-input" type="radio" name="adopter_old_enough" id="old" value="yes"
+                        checked />
                     <label class="form-check-label" for="old"> Yes </label>
                 </div>
                 <div class="form-check">
@@ -128,7 +137,8 @@ background-blend-mode: lighten;
                 {% endfor %}
                 {% endwith %}
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="adopter_stable_income" id="stable" value="yes" checked/>
+                    <input class="form-check-input" type="radio" name="adopter_stable_income" id="stable" value="yes"
+                        checked />
                     <label class="form-check-label" for="stable"> Yes </label>
                 </div>
                 <div class="form-check">
