--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -120,12 +120,14 @@
           </tr>
         </thead>
         <tbody>
-         {% for i in range(watch_names |length)%}
+        {% if "watch_name" in session%}
+         {% for i in range(session["watch_name"] |length)%}
           <tr>
-            <td>{{watch_names[i]}}</td>
-            <td><a href="{{watch_urls[i]}}">{{watch_urls[i]}}</a></td>
+            <td>{{session["watch_name"][i]}}</td>
+            <td><a href="{{session['watch_url']}}">{{session["watch_url"][i]}}</a></td>
           </tr>
         {% endfor %}
+        {% endif %}
         </tbody>
     </table>
 </div>
