--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -33,7 +33,9 @@
             height: 650px; 
             overflow: auto;   
         }
-
+        .watchlist{
+            width: 1016px;
+        }
         
     </style>
 </head>
@@ -112,11 +114,12 @@
 
 <div style="position: relative; top:200px;">
     <h2 style="font-family: 'Dancing Script', cursive;">Pet Watchlist</h2>
-    <table class="table watchlist">
-        <thead class="thead-dark">
+    <table class="table watchlist table-hover">
+        <thead>
           <tr>
-            <th scope="col">Pet Name</th>
+            <th scope="col" style="width:150px">Pet Name</th>
             <th scope="col">Pet's online profile</th>
+            <th class="cell100 column3">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -125,6 +128,7 @@
           <tr>
             <td>{{session["watch_name"][i]}}</td>
             <td><a href="{{session['watch_url']}}">{{session["watch_url"][i]}}</a></td>
+            <td class="cell100 column3"> <a href="/delete_watch/{{i}}">delete &nbsp;<i class="far fa-trash-alt"></i></a></td>
           </tr>
         {% endfor %}
         {% endif %}
