--- a/flask_app/templates/api_pets.html
+++ b/flask_app/templates/api_pets.html
@@ -119,7 +119,7 @@
          Breed:{{breeds[i]}}<br>
          Gender:{{genders[i]}}<br>
          Size:{{sizes[i]}}<br>
-         Online Profile: <a href={{urls[i]}}><button class="btn btn-warning m-1">Check it out</button></a>   
+         Online Profile: <a href={{urls[i]}} target="_blank" rel="noopener noreferrer"><button class="btn btn-warning m-1">Check it out</button></a>   
          <a href="/new/application" target="_blank" rel="noopener noreferrer">
           <button class="btn btn-outline-dark m-3">
               Start an application
